--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -56,8 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MoiKrugParser.cs" />
     <Compile Include="VacancyParserBase.cs" />
-    <Compile Include="MoikrugParser.cs" />
+    <Compile Include="Archive\MoikrugParserOld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vacancy.cs" />
