--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.13.5.0\lib\net40-client\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -56,8 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvVacancyExporter.cs" />
     <Compile Include="MoiKrugParser.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="VacancyCsvMapping.cs" />
     <Compile Include="VacancyParserBase.cs" />
     <Compile Include="Archive\MoikrugParserOld.cs" />
     <Compile Include="Program.cs" />
