--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D955FAB2-A8C2-4332-A6A6-AF294BE7E6AE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>test2</RootNamespace>
-    <AssemblyName>test2</AssemblyName>
+    <RootNamespace>JobSkillsDb</RootNamespace>
+    <AssemblyName>JobSkillsDb</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
