--- a/JobSkillsDb/App.config
+++ b/JobSkillsDb/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=r0zftv92l5.database.windows.net;initial catalog=skillsdb;user id=rudskoy;password=17031995Vlad;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="JobSkillsContext" connectionString="data source=r0zftv92l5.database.windows.net;initial catalog=skillsdb;user id=rudskoy;password=17031995Vlad;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
