--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -85,6 +85,12 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JobSkillsDb\JobSkillsDb.csproj">
+      <Project>{d955fab2-a8c2-4332-a6a6-af294be7e6ae}</Project>
+      <Name>JobSkillsDb</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
