--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -57,6 +57,15 @@
     <Compile Include="Entities\MarkedZone.cs" />
     <Compile Include="JobSkillsContext.cs" />
     <Compile Include="Entities\AprioriSkillSet.cs" />
+    <Compile Include="Migrations\201603040533100_init.cs" />
+    <Compile Include="Migrations\201603040533100_init.Designer.cs">
+      <DependentUpon>201603040533100_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603040555599_NameRefacroring.cs" />
+    <Compile Include="Migrations\201603040555599_NameRefacroring.Designer.cs">
+      <DependentUpon>201603040555599_NameRefacroring.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Skills.cs" />
@@ -68,7 +77,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <EmbeddedResource Include="Migrations\201603040533100_init.resx">
+      <DependentUpon>201603040533100_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603040555599_NameRefacroring.resx">
+      <DependentUpon>201603040555599_NameRefacroring.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
