--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\MarkedZone.cs" />
-    <Compile Include="JobSkillsContext.cs" />
+    <Compile Include="Entities\JobSkillsContext.cs" />
     <Compile Include="Entities\AprioriSkillSet.cs" />
     <Compile Include="Migrations\201603040533100_init.cs" />
     <Compile Include="Migrations\201603040533100_init.Designer.cs">
@@ -69,7 +69,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Skills.cs" />
-    <Compile Include="Entities\Source.cs" />
     <Compile Include="Entities\Vacancy.cs" />
   </ItemGroup>
   <ItemGroup>
