--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Archive\MoikrugParserOld.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Vacancy.cs" />
+    <Compile Include="VacancyView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
