--- a/JobSkillsDb/App.config
+++ b/JobSkillsDb/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="JobSkillsContext" connectionString="Server=tcp:fbox.database.windows.net,1433;Database=skills_miner_db_test;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="JobSkillsContext" connectionString="Server=fbox.database.windows.net,1433;Database=skills_miner_db;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
