--- a/Parser/App.config
+++ b/Parser/App.config
@@ -10,11 +10,14 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0" />
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="JobSkillsContext" connectionString="Server=fbox.database.windows.net,1433;Database=skills_miner_db;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
