--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -57,6 +57,11 @@
     <Compile Include="Entities\MarkedZone.cs" />
     <Compile Include="Entities\JobSkillsContext.cs" />
     <Compile Include="Entities\AprioriSkillSet.cs" />
+    <Compile Include="Migrations\201603050434522_UpdateSkills.cs" />
+    <Compile Include="Migrations\201603050434522_UpdateSkills.Designer.cs">
+      <DependentUpon>201603050434522_UpdateSkills.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Skills.cs" />
@@ -65,6 +70,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201603050434522_UpdateSkills.resx">
+      <DependentUpon>201603050434522_UpdateSkills.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
