Moved connection string to DbConfig

--- a/Parser/App.config
+++ b/Parser/App.config
@@ -17,7 +17,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="JobSkillsContext" connectionString="Server=fbox.database.windows.net,1433;Database=skills_miner_db;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="DbConfig.config"/>
 </configuration>
