--- a/Parser/App.config
+++ b/Parser/App.config
@@ -17,5 +17,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings configSource="DbConfig.config"/>
+  <connectionStrings configSource="Db.config"/>
 </configuration>
