--- a/Portal/Views/Web.config
+++ b/Portal/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Portal" />
+        <add namespace="JobSkillsDb.Entities"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
