Add acync controllers for editing training sets, add Asp.Net WebAPI

--- a/Portal/Web.config
+++ b/Portal/Web.config
@@ -52,4 +52,11 @@
     </compilers>
   </system.codedom>
   <connectionStrings configSource="Db.config" />
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
