--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -188,6 +188,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\TextMining\Details.cshtml" />
+    <Content Include="Views\TextMining\VacancyMarkedZones.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
