--- a/Apriori/Apriori.csproj
+++ b/Apriori/Apriori.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Output.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rule.cs" />
     <Compile Include="Sorter.cs" />
     <Compile Include="TestAprioriImplementation.cs" />
   </ItemGroup>
