--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\AprioriRule.cs" />
     <Compile Include="Entities\AprioriSkillSet.cs" />
+    <Compile Include="Entities\EclatSet.cs" />
     <Compile Include="Entities\JobSkillsContext.cs" />
     <Compile Include="Entities\MarkedZone.cs" />
     <Compile Include="Entities\SkillGroup.cs" />
@@ -68,6 +70,10 @@
     <Compile Include="Migrations\201603101623122_AddSkillsGroups.Designer.cs">
       <DependentUpon>201603101623122_AddSkillsGroups.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603211109407_AddTablesForAssociations.cs" />
+    <Compile Include="Migrations\201603211109407_AddTablesForAssociations.Designer.cs">
+      <DependentUpon>201603211109407_AddTablesForAssociations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603101623122_AddSkillsGroups.resx">
       <DependentUpon>201603101623122_AddSkillsGroups.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603211109407_AddTablesForAssociations.resx">
+      <DependentUpon>201603211109407_AddTablesForAssociations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
