Add controllers for apriori rules and eclat frequent sets generation

--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -149,6 +149,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AprioriRulesController.cs" />
+    <Compile Include="Controllers\EclatSetController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarkedZonesController.cs" />
     <Compile Include="Controllers\StatController.cs" />
@@ -208,6 +210,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\AprioriRules\" />
+    <Folder Include="Views\EclatSet\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
