--- a/Portal/Web.config
+++ b/Portal/Web.config
@@ -52,7 +52,9 @@
     </compilers>
   </system.codedom>
   <!--<connectionStrings configSource="Db.config" />-->
-  
+  <connectionStrings> 
+<add name="JobSkillsContext" connectionString="Server=fbox.database.windows.net,1433;Database=skills_miner_db;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" providerName="System.Data.SqlClient" /> 
+</connectionStrings>
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
