--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -222,6 +222,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Apriori\Apriori.csproj">
+      <Project>{9eb53a35-8221-4d1a-b971-8c49255a8a81}</Project>
+      <Name>Apriori</Name>
+    </ProjectReference>
     <ProjectReference Include="..\JobSkillsDb\JobSkillsDb.csproj">
       <Project>{67b27a53-1a82-4a4f-bda7-39308c99e065}</Project>
       <Name>JobSkillsDb</Name>
