--- a/Apriori/App.config
+++ b/Apriori/App.config
@@ -17,5 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings configSource="Db.config" />
+  <connectionStrings>
+    <add name="JobSkillsContext" connectionString="Server=fbox.database.windows.net,1433;Database=skills_miner_db;User ID=axel@fbox;Password=lu5bvASMvc;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
