--- a/Apriori/packages.config
+++ b/Apriori/packages.config
@@ -3,4 +3,5 @@
   <package id="CsvHelper" version="2.13.5.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="NUnit" version="3.0.1" targetFramework="net46" />
+  <package id="R.NET" version="1.5.5" targetFramework="net46" />
 </packages>
