--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -80,9 +80,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <Fakes Include="Fakes\CsvHelper.fakes" />
-    <None Include="Db.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="Db.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
