Add migrations and add method to download vacancy's content to txt-file

--- a/JobSkillsDb/JobSkillsDb.csproj
+++ b/JobSkillsDb/JobSkillsDb.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Entities\Skills.cs" />
     <Compile Include="Entities\SkillToGroupConnection.cs" />
     <Compile Include="Entities\Vacancy.cs" />
+    <Compile Include="Entities\VacancyContent.cs" />
     <Compile Include="Migrations\201603050434522_UpdateSkills.cs" />
     <Compile Include="Migrations\201603050434522_UpdateSkills.Designer.cs">
       <DependentUpon>201603050434522_UpdateSkills.cs</DependentUpon>
@@ -73,6 +74,14 @@
     <Compile Include="Migrations\201603211109407_AddTablesForAssociations.Designer.cs">
       <DependentUpon>201603211109407_AddTablesForAssociations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603222258467_ContentTable.cs" />
+    <Compile Include="Migrations\201603222258467_ContentTable.Designer.cs">
+      <DependentUpon>201603222258467_ContentTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201603230012222_RemoveContentFromVacancyTable.cs" />
+    <Compile Include="Migrations\201603230012222_RemoveContentFromVacancyTable.Designer.cs">
+      <DependentUpon>201603230012222_RemoveContentFromVacancyTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -88,6 +97,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603211109407_AddTablesForAssociations.resx">
       <DependentUpon>201603211109407_AddTablesForAssociations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603222258467_ContentTable.resx">
+      <DependentUpon>201603222258467_ContentTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603230012222_RemoveContentFromVacancyTable.resx">
+      <DependentUpon>201603230012222_RemoveContentFromVacancyTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
