--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Controllers\EclatSetController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarkedZonesController.cs" />
+    <Compile Include="Controllers\RecommendationsController.cs" />
     <Compile Include="Controllers\StatController.cs" />
     <Compile Include="Controllers\TextMiningController.cs" />
     <Compile Include="Controllers\VacancyController.cs" />
@@ -233,12 +234,16 @@
     <Content Include="Views\TextMining\ShowSkillsStats.cshtml" />
     <Content Include="Views\Vacancy\Index.cshtml" />
     <Content Include="Views\Stat\Index.cshtml" />
+    <Content Include="Views\Stat\GetTop.cshtml" />
+    <Content Include="Views\Recommendations\RecomendationList.cshtml" />
+    <Content Include="Views\Recommendations\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\AprioriRules\" />
     <Folder Include="Views\EclatSet\" />
+    <Folder Include="Views\Recomendation\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
